fix stars alignment

--- a/src/scss/components/stars.scss
+++ b/src/scss/components/stars.scss
@@ -3,12 +3,12 @@
   opacity: 0.5;
   transform: scale(1);
   &.top-left{
-    top: 5%;
+    top: 10%;
     left: 5%;
     animation-delay: 2s;
   }
   &.top-right{
-    top: 5%;
+    top: 10%;
     right: 5%;
     animation-delay: 8s;
   }
